# hackaton2026

./: .gitignore  README.md  live_inference.py  model_metadata.pkl  modelo_binario_parkinson(1).h5
backend/: app.py  download_data.py  esimulos_android.py  main.py  pyproject.toml
backend/parkinson_kinematics/: __init__.py  bradykinesia.py  pose_session.py  rigidity.py  schemas.py  tremor.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/public/model_js/: model.json
frontend/src/: App.css  App.js  index.css
frontend/src/components/: ARCanvas.js  ARGuide.js  CaptureScreen.js  Dashboard.js
frontend/src/hooks/: useDeviceSensors.js
frontend/src/utils/: captureSignal.js  geometry.js
src/: model_def.py  preprocess.py  train.py
